--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,15 @@
         android:textSize="18sp"
         android:layout_margin="5dp"
         android:padding="10dp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/loginWithGoogle"
+        android:text="Login with google"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:layout_margin="5dp"
+        android:padding="10dp"/>
     <ProgressBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
